fixing bug overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Open sans", Verdana, Geneva, Tahoma, sans-serif;
-    // background: linear-gradient(to bottom, #ece9e6, #ffffff);
     background: linear-gradient(to bottom, #abbaab, #ffffff);
     position: relative;
     padding: 100px 0;
@@ -356,6 +355,7 @@ main{
     z-index: 4;
     padding: 100px 0;
     background-color: $bg;
+    overflow: hidden;
     @include mobile{
         padding: 50px 0;
     }
@@ -534,6 +534,7 @@ main{
     padding-bottom: 100px;
     background-color: $bg;
     z-index: 5;
+    overflow: hidden;
     @include mobile{
         padding-top: 50px; 
     }
@@ -685,6 +686,7 @@ main{
     padding: 100px 0;
     position: relative;
     z-index: 6;
+    overflow: hidden;
     @include mobile{
         padding-top: 60px; 
     }
